# data-importer-clone

./: .gitignore  .pre-commit-config.yaml  README.md  big_diff.txt  pyproject.toml
docs/: CONTRIBUTING.md  architecture.md  impl-note-mvp1.md  impl-note-template-processing-variations.md  parser_architecture.md  pull_request_template.md
docs/adr/: 001-adopt-workspace-monorepo.md  002-implement-modular-parser.md  003-adopt-streamlit-for-ui.md
services/api/: pyproject.toml
tests/fixtures/: summary_data_v2.1_clean.xlsx
tests/unit/: test_dummy.py
utils/: branch_protection.sh
